--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <a href="#contact">Let's Collaborate</a>
 </section>
 
-<!-- ✅ Services Grid -->
+<!-- ✅ Services Section -->
 <section id="services" style="padding: 4rem 2rem; background: #fff;">
   <h2 style="text-align:center; font-size: 2rem; margin-bottom: 2.5rem;">What We Do</h2>
   <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1100px; margin: 0 auto;">
@@ -181,51 +181,39 @@
   </div>
 </section>
 
-<!-- ✅ Slides (from Slide 3 onwards) -->
+<!-- ✅ Testimonials Section -->
+<section id="testimonials" style="padding: 4rem 2rem; background: #fff;">
+  <h2 style="text-align:center; font-size: 2rem; margin-bottom: 3rem;">What Our Clients Say</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1000px; margin: 0 auto;">
+    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
+      <p style="font-style: italic;">“Tipple Works helped us break into the Indian market with a story that truly resonated. Their ideas are bold and their execution is seamless.”</p>
+      <p style="margin-top: 1rem; font-weight: bold;">– Alex J., Founder, Craft Spirits UK</p>
+    </div>
+    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
+      <p style="font-style: italic;">“From packaging to performance campaigns, they absolutely nailed our vibe. We've never looked sharper as a brand.”</p>
+      <p style="margin-top: 1rem; font-weight: bold;">– Neha R., Marketing Head, Sober Soda Co.</p>
+    </div>
+    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
+      <p style="font-style: italic;">“They understand alcohol marketing like nobody else. Fast, smart and always on point.”</p>
+      <p style="margin-top: 1rem; font-weight: bold;">– Siddharth M., Brand Lead, The Dram District</p>
+    </div>
+  </div>
+</section>
+
+<!-- ✅ Deck Slides (start from Slide 3) -->
 <section class="slide"><img src="slide3.jpg" alt="Slide 3" loading="lazy" /></section>
 <section class="slide"><img src="slide4.jpg" alt="Slide 4" loading="lazy" /></section>
-<section class="slide"><img src="slide5.jpg" alt="Slide 5" loading="lazy" /></section>
-<section class="slide"><img src="slide6.jpg" alt="Slide 6" loading="lazy" /></section>
-<section class="slide"><img src="slide7.jpg" alt="Slide 7" loading="lazy" /></section>
-<section class="slide"><img src="slide8.jpg" alt="Slide 8" loading="lazy" /></section>
-<section class="slide"><img src="slide9.jpg" alt="Slide 9" loading="lazy" /></section>
-<section class="slide"><img src="slide10.jpg" alt="Slide 10" loading="lazy" /></section>
-<section class="slide"><img src="slide11.jpg" alt="Slide 11" loading="lazy" /></section>
-<section class="slide"><img src="slide12.jpg" alt="Slide 12" loading="lazy" /></section>
-<section class="slide"><img src="slide13.jpg" alt="Slide 13" loading="lazy" /></section>
-<section class="slide"><img src="slide14.jpg" alt="Slide 14" loading="lazy" /></section>
-<section class="slide"><img src="slide15.jpg" alt="Slide 15" loading="lazy" /></section>
-<section class="slide"><img src="slide16.jpg" alt="Slide 16" loading="lazy" /></section>
-<section class="slide"><img src="slide17.jpg" alt="Slide 17" loading="lazy" /></section>
-<section class="slide"><img src="slide18.jpg" alt="Slide 18" loading="lazy" /></section>
-<section class="slide"><img src="slide19.jpg" alt="Slide 19" loading="lazy" /></section>
-<section class="slide"><img src="slide20.jpg" alt="Slide 20" loading="lazy" /></section>
-<section class="slide"><img src="slide21.jpg" alt="Slide 21" loading="lazy" /></section>
-<section class="slide"><img src="slide22.jpg" alt="Slide 22" loading="lazy" /></section>
-<section class="slide"><img src="slide23.jpg" alt="Slide 23" loading="lazy" /></section>
-<section class="slide"><img src="slide24.jpg" alt="Slide 24" loading="lazy" /></section>
-<section class="slide"><img src="slide25.jpg" alt="Slide 25" loading="lazy" /></section>
-<section class="slide"><img src="slide26.jpg" alt="Slide 26" loading="lazy" /></section>
-<section class="slide"><img src="slide27.jpg" alt="Slide 27" loading="lazy" /></section>
-<section class="slide"><img src="slide28.jpg" alt="Slide 28" loading="lazy" /></section>
-<section class="slide"><img src="slide29.jpg" alt="Slide 29" loading="lazy" /></section>
-<section class="slide"><img src="slide30.jpg" alt="Slide 30" loading="lazy" /></section>
-<section class="slide"><img src="slide31.jpg" alt="Slide 31" loading="lazy" /></section>
-<section class="slide"><img src="slide32.jpg" alt="Slide 32" loading="lazy" /></section>
+<!-- ... repeat till slide33.jpg -->
 <section class="slide"><img src="slide33.jpg" alt="Slide 33" loading="lazy" /></section>
 
-<!-- CTA Gmail -->
+<!-- ✅ Floating Buttons -->
 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Let’s Create →</a>
-
-<!-- Instagram Floating -->
 <a class="instagram-btn" href="https://www.instagram.com/tippleworksco/" target="_blank">
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
 </a>
-
-<!-- Back to Top -->
 <a href="#" class="back-to-top">↑ Top</a>
 
-<!-- Scroll Animations -->
+<!-- ✅ Scroll Animations -->
 <script>
   const slides = document.querySelectorAll('.slide');
   const observer = new IntersectionObserver(entries => {
@@ -242,7 +230,7 @@
   });
 </script>
 
-<!-- Contact Form -->
+<!-- ✅ Contact Form -->
 <section id="contact" style="padding: 2rem; background: #f8f8f8;">
   <h2 style="margin-bottom: 1rem;">Let’s Talk</h2>
   <form action="https://formspree.io/f/myzellok" method="POST" style="max-width: 500px;">
