--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
       width: 100%;
       height: auto;
       display: block;
-      loading: lazy;
     }
 
     .cta {
@@ -198,42 +197,18 @@
   </div>
 </section>
 
-
-<!-- ✅ Floating Buttons -->
-<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Let’s Create →</a>
-<a class="instagram-btn" href="https://www.instagram.com/tippleworksco/" target="_blank">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
-</a>
-<a href="#top" class="back-to-top">↑ Top</a>
-
-<!-- ✅ Scroll Animations -->
-<script>
-  const slides = document.querySelectorAll('.slide');
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.style.opacity = 1;
-        entry.target.style.transform = 'translateY(0)';
-      }
-    });
-  }, { threshold: 0.1 });
-
-  slides.forEach(slide => {
-    observer.observe(slide);
-  });
-</script>
-
-<!-- ✅ Contact Form -->
-<section id="contact" style="padding: 2rem; background: #f8f8f8;">
-  <h2 style="margin-bottom: 1rem;">Let’s Talk</h2>
-  <form action="https://formspree.io/f/myzellok" method="POST" style="max-width: 500px;">
-    <label>Your email:<br>
-      <input type="email" name="email" required style="width: 100%; margin-bottom: 1rem; padding: 0.5rem;">
-    </label><br>
-    <label>Your message:<br>
-      <textarea name="message" required style="width: 100%; height: 150px; padding: 0.5rem;"></textarea>
-    </label><br>
-    <button type="submit" style="margin-top: 1rem; background: black; color: white; padding: 0.75rem 1.5rem; border: none; border-radius: 4px;">
+<!-- ✅ Modernized Contact Form -->
+<section id="contact" style="padding: 4rem 2rem; background: #f8f8f8; font-family: sans-serif;">
+  <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Let’s Talk</h2>
+  <form action="https://formspree.io/f/myzellok" method="POST" style="max-width: 600px; margin: 0 auto; background: #fff; padding: 2rem; border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.05);">
+    <label for="email" style="display: block; font-weight: bold; margin-bottom: 0.5rem;">Email Address</label>
+    <input type="email" id="email" name="email" required
+      style="width: 100%; padding: 0.75rem 1rem; margin-bottom: 1.5rem; border: 1px solid #ccc; border-radius: 8px; font-size: 1rem;" />
+    <label for="message" style="display: block; font-weight: bold; margin-bottom: 0.5rem;">Your Message</label>
+    <textarea id="message" name="message" required rows="6"
+      style="width: 100%; padding: 0.75rem 1rem; border: 1px solid #ccc; border-radius: 8px; font-size: 1rem; resize: vertical;"></textarea>
+    <button type="submit"
+      style="margin-top: 1.5rem; background-color: #000; color: #fff; padding: 0.9rem 2rem; font-size: 1rem; font-weight: bold; border: none; border-radius: 50px; cursor: pointer; transition: background-color 0.3s ease;">
       Send →
     </button>
   </form>
@@ -251,6 +226,30 @@
   </div>
   <p style="font-size: 0.9rem; color: #aaa;">© 2024 Tipple Works Co. All rights reserved.</p>
 </footer>
+
+<!-- ✅ Floating Buttons -->
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Let’s Create →</a>
+<a class="instagram-btn" href="https://www.instagram.com/tippleworksco/" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
+</a>
+<a href="#top" class="back-to-top">↑ Top</a>
+
+<!-- ✅ Scroll Animation Script -->
+<script>
+  const slides = document.querySelectorAll('.slide');
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.style.opacity = 1;
+        entry.target.style.transform = 'translateY(0)';
+      }
+    });
+  }, { threshold: 0.1 });
+
+  slides.forEach(slide => {
+    observer.observe(slide);
+  });
+</script>
 
 </body>
 </html>
