--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tipple Works Co. Deck</title>
 
-  <!-- ✅ Google Analytics -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSZN4E7TRS"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -17,7 +17,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <!-- SEO & Social Preview -->
+  <!-- SEO & Social -->
   <meta name="description" content="Tipple Works Co. - Creative alcohol marketing agency">
   <meta property="og:title" content="Tipple Works Co.">
   <meta property="og:description" content="Explore our creative deck showcasing what Tipple Works Co. does best – elevating alcohol brands.">
@@ -27,7 +27,52 @@
 
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: sans-serif; background: #fff; color: #111; overflow-x: hidden; scroll-behavior: smooth; }
+    body { font-family: 'Segoe UI', sans-serif; background: #fff; color: #111; scroll-behavior: smooth; }
+
+    .hero {
+      background: url('main-page.jpg') center center / cover no-repeat;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: #fff;
+      position: relative;
+    }
+
+    .hero::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.5);
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 2;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    .hero a {
+      background: #f6c301;
+      color: #000;
+      padding: 12px 30px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .hero a:hover { background: #ffc800; }
 
     .slide {
       margin-bottom: 2rem;
@@ -40,6 +85,7 @@
       width: 100%;
       height: auto;
       display: block;
+      loading: lazy;
     }
 
     .cta {
@@ -56,8 +102,6 @@
       z-index: 1000;
     }
 
-    .cta:hover { background: #333; }
-
     .back-to-top {
       position: fixed;
       bottom: 100px;
@@ -69,10 +113,6 @@
       text-decoration: none;
       font-size: 14px;
       z-index: 999;
-    }
-
-    .back-to-top:hover {
-      background: #555;
     }
 
     .instagram-btn {
@@ -87,154 +127,100 @@
       height: 40px;
     }
 
-    .hero {
+    section {
+      padding: 4rem 2rem;
+    }
+
+    footer {
       background: #000;
       color: #fff;
-      padding: 6rem 2rem;
       text-align: center;
+      padding: 3rem 2rem;
     }
 
-    .hero h1 {
-      font-size: 2.8rem;
-      margin-bottom: 1rem;
-      letter-spacing: -0.5px;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 0 auto 2rem;
-      line-height: 1.6;
-    }
-
-    .hero a {
-      background: #f6c301;
-      color: #000;
+    footer a {
+      color: #fff;
       text-decoration: none;
-      font-weight: bold;
-      padding: 14px 30px;
-      border-radius: 50px;
-      display: inline-block;
-      transition: 0.3s ease;
+      margin: 0 15px;
     }
 
-    .hero a:hover {
-      background: #ffc800;
+    footer a:hover { color: #f6c301; }
+
+    .contact-form {
+      max-width: 500px;
+      margin: auto;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      width: 100%;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    .contact-form button {
+      background: #000;
+      color: #fff;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 30px;
+      cursor: pointer;
+    }
+
+    .contact-form button:hover {
+      background: #333;
     }
   </style>
 </head>
 <body>
 
-<!-- Anchor for Home -->
-<div id="top"></div>
-
 <!-- ✅ Hero Section -->
-<section class="hero">
-  <h1>We Make Alcohol Brands Unmissable</h1>
-  <p>From strategy to sizzle, Tipple Works builds alcohol brands that get people talking. Packaging, content, strategy, and experiences that pour creativity into every sip.</p>
-  <a href="#contact">Let's Collaborate</a>
-</section>
-
-<!-- ✅ Services Grid -->
-<section id="services" style="padding: 4rem 2rem; background: #fff;">
-  <h2 style="text-align:center; font-size: 2rem; margin-bottom: 2.5rem;">What We Do</h2>
-  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1100px; margin: 0 auto;">
-    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
-         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
-         onmouseout="this.style.background='#000'; this.style.color='#fff';">
-      <h3 style="margin-bottom: 0.5rem;">Brand Strategy</h3>
-      <p style="font-size: 0.95rem;">Positioning, tone of voice, identity & messaging for alcohol brands.</p>
-    </div>
-    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
-         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
-         onmouseout="this.style.background='#000'; this.style.color='#fff';">
-      <h3 style="margin-bottom: 0.5rem;">Social Media</h3>
-      <p style="font-size: 0.95rem;">Reels, grid posts, campaigns, and strategy with consistent brand tone.</p>
-    </div>
-    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
-         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
-         onmouseout="this.style.background='#000'; this.style.color='#fff';">
-      <h3 style="margin-bottom: 0.5rem;">Packaging & Design</h3>
-      <p style="font-size: 0.95rem;">Bottle labels, packs, shelf-ready creative for modern alcohol brands.</p>
-    </div>
-    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
-         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
-         onmouseout="this.style.background='#000'; this.style.color='#fff';">
-      <h3 style="margin-bottom: 0.5rem;">Performance Marketing</h3>
-      <p style="font-size: 0.95rem;">Meta, Google, influencer & remarketing ads with end-to-end funnel design.</p>
-    </div>
+<section class="hero" id="top">
+  <div class="hero-content">
+    <h1>We Make Alcohol Brands Unmissable</h1>
+    <p>Strategy. Packaging. Content. Ads. The whole bottle.</p>
+    <a href="#contact">Let’s Collaborate</a>
   </div>
 </section>
 
-<!-- ✅ Clients Section -->
-<section id="clients" style="padding: 4rem 2rem; background: #fafafa;">
-  <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Brands We've Worked With</h2>
-  <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 2rem; max-width: 1200px; margin: 0 auto;">
-    <img src="client1.png" alt="Client 1" style="height: 50px; max-width: 120px; object-fit: contain;">
-    <img src="client2.png" alt="Client 2" style="height: 50px; max-width: 120px; object-fit: contain;">
-    <img src="client3.png" alt="Client 3" style="height: 50px; max-width: 120px; object-fit: contain;">
-    <img src="client4.png" alt="Client 4" style="height: 50px; max-width: 120px; object-fit: contain;">
-    <img src="client5.png" alt="Client 5" style="height: 50px; max-width: 120px; object-fit: contain;">
-  </div>
-</section>
+<!-- ✅ Slides -->
+<section class="slide"><img src="slide2.jpg" alt="Slide 2" loading="lazy" /></section>
+<!-- Add more slides here as needed -->
 
-<!-- ✅ Testimonials Section -->
-<section id="testimonials" style="padding: 4rem 2rem; background: #fff;">
-  <h2 style="text-align:center; font-size: 2rem; margin-bottom: 3rem;">What Our Clients Say</h2>
-  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1000px; margin: 0 auto;">
-    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
-      <p style="font-style: italic;">“Tipple Works helped us break into the Indian market with a story that truly resonated. Their ideas are bold and their execution is seamless.”</p>
-      <p style="margin-top: 1rem; font-weight: bold;">– Alex J., Founder, Craft Spirits UK</p>
-    </div>
-    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
-      <p style="font-style: italic;">“From packaging to performance campaigns, they absolutely nailed our vibe. We've never looked sharper as a brand.”</p>
-      <p style="margin-top: 1rem; font-weight: bold;">– Neha R., Marketing Head, Sober Soda Co.</p>
-    </div>
-    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
-      <p style="font-style: italic;">“They understand alcohol marketing like nobody else. Fast, smart and always on point.”</p>
-      <p style="margin-top: 1rem; font-weight: bold;">– Siddharth M., Brand Lead, The Dram District</p>
-    </div>
-  </div>
-</section>
-
-<!-- ✅ Modernized Contact Form -->
-<section id="contact" style="padding: 4rem 2rem; background: #f8f8f8; font-family: sans-serif;">
-  <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Let’s Talk</h2>
-  <form action="https://formspree.io/f/myzellok" method="POST" style="max-width: 600px; margin: 0 auto; background: #fff; padding: 2rem; border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.05);">
-    <label for="email" style="display: block; font-weight: bold; margin-bottom: 0.5rem;">Email Address</label>
-    <input type="email" id="email" name="email" required
-      style="width: 100%; padding: 0.75rem 1rem; margin-bottom: 1.5rem; border: 1px solid #ccc; border-radius: 8px; font-size: 1rem;" />
-    <label for="message" style="display: block; font-weight: bold; margin-bottom: 0.5rem;">Your Message</label>
-    <textarea id="message" name="message" required rows="6"
-      style="width: 100%; padding: 0.75rem 1rem; border: 1px solid #ccc; border-radius: 8px; font-size: 1rem; resize: vertical;"></textarea>
-    <button type="submit"
-      style="margin-top: 1.5rem; background-color: #000; color: #fff; padding: 0.9rem 2rem; font-size: 1rem; font-weight: bold; border: none; border-radius: 50px; cursor: pointer; transition: background-color 0.3s ease;">
-      Send →
-    </button>
+<!-- ✅ Contact Form -->
+<section id="contact" style="background: #f8f8f8;">
+  <h2 style="text-align:center; font-size:2rem; margin-bottom:2rem;">Let’s Talk</h2>
+  <form action="https://formspree.io/f/myzellok" method="POST" class="contact-form">
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit">Send →</button>
   </form>
 </section>
 
-<!-- ✅ Final Footer -->
-<footer style="background: #000; color: #fff; padding: 3rem 2rem; text-align: center;">
+<!-- ✅ Footer -->
+<footer>
   <img src="logo.png" alt="Tipple Works Logo" style="height: 50px; margin-bottom: 1.5rem;" />
   <div style="margin-bottom: 1.5rem;">
-    <a href="#top" style="color: #fff; text-decoration: none; margin: 0 15px;" onmouseover="this.style.color='#f6c301'" onmouseout="this.style.color='#fff'">Home</a>
-    <a href="#services" style="color: #fff; text-decoration: none; margin: 0 15px;" onmouseover="this.style.color='#f6c301'" onmouseout="this.style.color='#fff'">Services</a>
-    <a href="#clients" style="color: #fff; text-decoration: none; margin: 0 15px;" onmouseover="this.style.color='#f6c301'" onmouseout="this.style.color='#fff'">Clients</a>
-    <a href="#contact" style="color: #fff; text-decoration: none; margin: 0 15px;" onmouseover="this.style.color='#f6c301'" onmouseout="this.style.color='#fff'">Contact</a>
-    <a href="https://www.instagram.com/tippleworksco/" target="_blank" style="color: #fff; text-decoration: none; margin: 0 15px;" onmouseover="this.style.color='#f6c301'" onmouseout="this.style.color='#fff'">Instagram</a>
+    <a href="#top">Home</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+    <a href="https://www.instagram.com/tippleworksco/" target="_blank">Instagram</a>
   </div>
   <p style="font-size: 0.9rem; color: #aaa;">© 2024 Tipple Works Co. All rights reserved.</p>
 </footer>
 
 <!-- ✅ Floating Buttons -->
-<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Let’s Create →</a>
+<a href="mailto:rohan.dhirwani@tippleworks.com" class="cta">Let’s Create →</a>
+<a href="#top" class="back-to-top">↑ Top</a>
 <a class="instagram-btn" href="https://www.instagram.com/tippleworksco/" target="_blank">
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
 </a>
-<a href="#top" class="back-to-top">↑ Top</a>
 
-<!-- ✅ Scroll Animation Script -->
+<!-- ✅ Scroll Animations -->
 <script>
   const slides = document.querySelectorAll('.slide');
   const observer = new IntersectionObserver(entries => {
