--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tipple Works Co.</title>
+  <title>Tipple Works Co. Deck</title>
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSZN4E7TRS"></script>
@@ -178,11 +178,14 @@
 </head>
 <body>
 
- .hero {
-      background: url('main-page.jpg') center center / cover no-repeat;
-      height: 100vh;
-      width: 100%;
-    }
+<!-- ✅ Hero Section -->
+<section class="hero" id="top">
+  <div class="hero-content">
+    <h1>We Make Alcohol Brands Unmissable</h1>
+    <p>Strategy. Packaging. Content. Ads. The whole bottle.</p>
+    <a href="#contact">Let’s Collaborate</a>
+  </div>
+</section>
 
 <!-- ✅ Slides -->
 <section class="slide"><img src="slide2.jpg" alt="Slide 2" loading="lazy" /></section>
