--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <a href="#contact" style="color: #fff; text-decoration: none; margin: 0 15px;" onmouseover="this.style.color='#f6c301'" onmouseout="this.style.color='#fff'">Contact</a>
     <a href="https://www.instagram.com/tippleworksco/" target="_blank" style="color: #fff; text-decoration: none; margin: 0 15px;" onmouseover="this.style.color='#f6c301'" onmouseout="this.style.color='#fff'">Instagram</a>
   </div>
-  <p style="font-size: 0.9rem; color: #aaa;">© 2024 Tipple Works Co. All rights reserved.</p>
+  <p style="font-size: 0.9rem; color: #aaa;">© 2025 Tipple Works PVT LTD. All rights reserved.</p>
 </footer>
 
 <!-- ✅ Floating Buttons -->
