--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
 <!-- Anchor for Home -->
 <div id="top"></div>
 
-<!-- ✅ Hero Section -->
-<section class="hero">
-  <h1>We Make Alcohol Brands Unmissable</h1>
-  <p>From strategy to sizzle, Tipple Works builds alcohol brands that get people talking. Packaging, content, strategy, and experiences that pour creativity into every sip.</p>
-  <a href="#contact">Let's Collaborate</a>
+<!-- ✅ Hero Section: Logo + Button -->
+<section class="hero" style="background: url('Heroimage.jpg') no-repeat center center/cover; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+  <img src="logo.png" alt="Tipple Works Co. Logo" class="hero-logo" style="width: 300px; max-width: 80%; opacity: 0; animation: fadeIn 2s ease-out forwards; margin-bottom: 2rem;" />
+  <a href="#contact" style="background: #f6c301; color: #000; text-decoration: none; font-weight: bold; padding: 14px 30px; border-radius: 50px; font-size: 1rem; transition: background 0.3s ease;">
+    Let’s Collaborate
+  </a>
 </section>
 
 <!-- ✅ Services Grid -->
