--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
     .hero a:hover {
       background: #ffc800;
     }
+.hero img {
+  max-width: 300px;
+  width: 100%;
+  opacity: 0;
+  animation: fadeIn 2s ease forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
   </style>
 </head>
 <body>
