--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 </footer>
 
 <!-- ✅ Floating Buttons -->
-<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Let’s Create →</a>
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Email us →</a>
 <a class="instagram-btn" href="https://www.instagram.com/tippleworksco/" target="_blank">
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
 </a>
