Reset to before on hero

--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
 <!-- Anchor for Home -->
 <div id="top"></div>
 
+<!-- ✅ Hero Section: Logo + Button -->
+<section class="hero" style="background: #000; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
   <img src="logo.png" alt="Tipple Works Co. Logo" style="width: 280px; max-width: 80%; margin-bottom: 2rem;" />
   <a href="#contact" style="background: #f6c301; color: #000; text-decoration: none; font-weight: bold; padding: 14px 30px; border-radius: 50px; font-size: 1rem; transition: background 0.3s ease;">
     Let’s Collaborate
