--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <section class="hero">
   <img src="logo.png" alt="Tipple Works Logo" class="hero-logo" />
   <br />
-  <a href="https://drive.google.com/file/d/https://https://drive.google.com/drive/folders/1k_IXMx8JI1lqzwOKYDw_hAiuGj9oqvKV?usp=drive_link" target="_blank">Portfolio</a>
+  <a href="https://drive.google.com/file/d/drive.google.com/drive/folders/1k_IXMx8JI1lqzwOKYDw_hAiuGj9oqvKV?usp=drive_link" target="_blank">Portfolio</a>
 </section>
 
 <!-- ✅ Services Grid -->
