--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 }
 
 .hero-logo {
-  width: 180px;
+  width: 540px; /* 3x bigger than 180px */
+  max-width: 90vw; /* Responsive limit */
   height: auto;
   animation: fadeInScale 1.2s ease forwards;
   opacity: 0;
